2024-08-16T01:06:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10412922611 # 389
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-16
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 168 234 / 169 235
* notice: next accum: outdated-unq outdated-all / unq all: 169 235 / 171 237
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2024-05-02] / [2024-08-15]

2024-05-09T16:16:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9020213440 # 257
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-09
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 167 233 / 169 235
* notice: next accum: outdated-unq outdated-all / unq all: 168 234 / 169 235
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-04-25] / []

2024-05-08T16:16:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9005105374 # 254
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-08
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 166 231 / 169 235
* notice: next accum: outdated-unq outdated-all / unq all: 167 233 / 169 235
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-04-24] / []

2024-05-02T08:16:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8920742634 # 235