@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-08-16T01:06:17Z",
+  "timestamp" : "2024-08-21T01:06:12Z",
   "count_outdated" : 235,
   "uniques_outdated" : 169,
-  "count" : 237,
-  "uniques" : 171,
+  "count" : 238,
+  "uniques" : 172,
   "clones" : [
     {
       "timestamp": "2024-08-15T00:00:00Z",
@@ -13,6 +13,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-08-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
